@@ -21,3 +21,4 @@
 - OS agnostic default configuration {pull}17016[17016]
 - Display the stability of the agent at enroll and start.  {pull}17336[17336]
 - Support for config constraints {pull}17112[17112]
+- Introduced post install hooks {pull}17241[17241]
